# loanfinmod

./: .gitignore  .pre-commit-config.yaml  FORMULAS.md  README.md  pyproject.toml  requirements.txt
finmod/: __init__.py  aggregation.py  calculator.py  simulation.py  timeline.py  validators.py
finmod/simulation/: __init__.py  full.py  real.py  synthetic.py
loanfinmod/: __init__.py  calculator.py  timeline.py
loanfinmod/calculator/: __init__.py  calculator__init__.py  dataframe.py  loan_calculator.py  loan_dataframe.py
loanfinmod/simulation/: __init__.py  real.py  simulation__init__.py  synthetic.py
loanfinmod/time_setup/: period.py  time__init__.py
script/: update_readme_version.py
scripts/: update_readme_version.py
