[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finmod"
version = "0.1.0"
description = "Financial modeling and calculation toolkit"
authors = [
    {name = "Analytic Center", email = "ariq.lubis@bfi.co.od"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/bfi-finance/finmod"
Repository = "https://github.com/bfi-finance/finmod"

[tool.setuptools.packages.find]
where = ["."]
include = ["finmod*"]