[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finmod"
version = "1.0.0" 
description = "Financial modeling and calculation toolkit for loan payment calculations, OSP projections, and interest income simulations"
authors = [
    {name = "BFI Finance Analytic Center", email = "ariq.lubis@bfi.co.id"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["finance", "loan", "payment", "calculation", "modeling", "osp", "interest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/bfi-finance/finmod"
Repository = "https://github.com/bfi-finance/finmod.git"
Issues = "https://github.com/bfi-finance/finmod/issues"
Documentation = "https://github.com/bfi-finance/finmod#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["finmod*"]