[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loanfinmod"
version = "1.0.0" 
description = "Financial modeling and calculation toolkit for loan payment calculations, OSP projections, and interest income simulations"
authors = {text = "Irsyad Damlis"}
email = {text = "irsyad.damlis@gmail.com"}
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["finance", "loan", "payment", "calculation", "modeling", "osp", "interest"]
classifiers = [
    "Development Status :: 1 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "python-dateutil>=2.8.0"
]

[project.urls]
Homepage = "https://github.com/irsyad.damlis/loanfinmod"
Repository = "https://github.com/irsyad.damlis/loanfinmod.git"
Issues = "https://github.com/irsyad.damlis/loanfinmod/issues"
Documentation = "https://github.com/irsyad.damlis/loanfinmod#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["loanfinmod*"]
